# Repeatability-and-Kinematic-Identification

./: README.md
Calibration/: CMakeLists.txt  calibration_init_guess.cpp  calibration_noinit_guess.cpp
Repeatability/: CMakeLists.txt  Rep_v1.cpp
Repeatability/24Feb/: min_max_checker.m
Repeatability/24Feb/100%Compliance/: Pose_02_24_163125.txt  repeatabiilty
Repeatability/24Feb/100%Force/: Pose_02_24_143128.csv  repeatabiilty
Repeatability/24Feb/Standard/: Pose_02_24_111500.csv  mean~  repeatabiilty
